<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="163dp"
        android:layout_height="31dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/which"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="238dp" />

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="398dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="308dp">

        <LinearLayout
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                app:srcCompat="@drawable/run" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/run"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                app:srcCompat="@drawable/bicycle" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/Cycling"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?android:attr/panelBackground"
                app:srcCompat="@drawable/kayak" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/kayak"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                app:srcCompat="@drawable/swim" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/Swim"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                app:srcCompat="@drawable/hiking" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/hike"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                app:srcCompat="@drawable/walk" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/walk"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>