<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TrainingFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="163dp"
        android:layout_height="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="217dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/poppins"
        android:text="@string/which"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.56" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="381dp"
        android:layout_height="398dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonRun"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                android:src="@drawable/run" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/run"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButtonCycling"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                android:src="@drawable/bicycle" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/Cycling"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButtonKayaking"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:backgroundTint="?android:attr/panelBackground"
                android:src="@drawable/kayak" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/kayak"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="186dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonSwimming"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                android:src="@drawable/swim" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/Swim"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButtonHiking"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                android:src="@drawable/hiking" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/hike"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/imageButtonWalking"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_weight="1"
                android:backgroundTint="?android:attr/panelBackground"
                android:src="@drawable/walk" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/walk"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>